syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.academy.erombi";

package br.com.zup.academy.erombi;

import "google/protobuf/timestamp.proto";

service KeyManagerGrpcService {

  rpc cadastrarKey(NovaKeyRequest) returns (NovaKeyResponse) {}

  rpc removeKey(RemoveKeyRequest) returns (RemoveKeyResponse) {}

  rpc consultaKey(ConsultaKeyRequest) returns (ConsultaKeyResponse) {}

  rpc consultaKeysPorCliente(ConsultaKeyPorClienteRequest) returns (ConsultaKeyPorClienteResponse) {}

}

enum TipoConta {
    UNKNOWN_TIPO_CONTA = 0;
    CACC = 1;
    SVGS = 2;
}

enum TipoKey {
  RANDOM = 0;
  CPF = 1;
  CNPJ = 2;
  PHONE = 3;
  EMAIL = 4;
}

message NovaKeyRequest {
  string uuidCliente = 1;
  TipoKey tipoKey = 2;
  string key = 3;
  TipoConta tipoConta = 4;
}

message NovaKeyResponse {
  string pixId = 1;
}

message RemoveKeyRequest {
  string idKey = 1;
  string idCliente = 2;
}

message RemoveKeyResponse {}

message ConsultaKeyRequest {
  message FiltroPorPix {
    string idKey = 1;
    string idCliente = 2;
  }

  oneof filtro {
    string key = 1;
    FiltroPorPix pix = 2;
  }
}

message ConsultaKeyResponse {

  message ChavePix {

    message ContaInfo {
      TipoConta tipo = 1;
      string instituicao = 2;
      string nomeTitular = 3;
      string cpfTitular = 4;
      string agencia = 5;
      string numeroConta = 6;
    }

    TipoKey tipoKey = 1;
    string key = 2;
    ContaInfo conta = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId = 2;
  ChavePix chave = 3;
}

message ConsultaKeyPorClienteRequest {
  string idCliente = 1;
}

message ConsultaKeyPorClienteResponse {

  message KeyDescription {
    string pixId = 1;
    string clienteId = 2;
    TipoKey tipoKey = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp criadoEm = 5;
  }

  repeated KeyDescription keys = 1;
}
